<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5" tools:context=".MainActivity">

    <!-- Shadowed background card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/backgroundCard"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#F5F5F5"
        app:cardElevation="12dp"
        app:cardBackgroundColor="#F5F5F5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageButton
                android:id="@+id/topLeftIconButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/gallery_icon"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/menu_icon"
                android:background="#F5F5F5"
                app:layout_constraintBottom_toBottomOf="@id/titleImageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/titleImageView" />

            <ImageView
                android:id="@+id/titleImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity= "center_vertical"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/app_name_title"
                android:src="@drawable/gulliver"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/transaction"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/transaction_icon"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/transaction_icon"
                android:background="#F5F5F5"
                app:layout_constraintBottom_toBottomOf="@id/titleImageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/titleImageView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:id="@+id/menuContainer"
        android:layout_marginTop="72dp"
        android:layout_marginRight="14dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="12dp"
        />

    <FrameLayout
        android:id="@+id/mainMenuContainer"
        android:layout_marginTop="72dp"
        android:layout_marginLeft="14dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="12dp"
        />



    <com.google.android.material.card.MaterialCardView
    android:id="@+id/mapCardView"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginStart="14dp"
    android:layout_marginEnd="14dp"
    android:layout_marginTop="12dp"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="40dp" app:cardElevation="4dp"
    app:layout_constraintTop_toBottomOf="@+id/backgroundCard"
    app:layout_constraintBottom_toTopOf="@id/bottomNavLayout"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:strokeColor="@color/card_stroke_color"
    app:strokeWidth="6dp">


        <FrameLayout
            android:id="@+id/mapContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/mapImageView"
                android:layout_width="2247dp"
                android:layout_height="1757dp"
                android:scaleType="matrix"
                android:src="@drawable/map"
                android:contentDescription="@string/map_description"
                />

            <ImageButton
                android:id="@+id/cityMarker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/marker_icon"
                android:contentDescription="City Marker"
                android:visibility="invisible" />
        </FrameLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomNavLayout"
        android:layout_width="189dp"
        android:layout_height="49dp"
        android:layout_marginBottom="26dp"
        android:background="@drawable/bottom_nav_background"
        android:paddingStart="16dp"
        android:elevation="4dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"

        android:clipChildren="false"
        android:clipToPadding="false">

        <TextView
            android:id="@+id/cityTextView1"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:text="Copenhagen"
            android:gravity="center"
            android:textAlignment="center"
            android:alpha="1.0"
            android:textColor="#5F2C2C"
            android:fontFamily="@font/latobold"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/cityTextView2"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:text="" android:gravity="center"
            android:textAlignment="center"
            android:alpha="0.0"
            android:textColor="#000000"
            android:fontFamily="@font/latobold"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/leftArrowButton"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/previous_city"
        android:padding="5dp"
        android:scaleType="centerInside"
        android:src="@drawable/leftarrow"
        app:layout_constraintBottom_toBottomOf="@id/bottomNavLayout"
        app:layout_constraintTop_toTopOf="@id/bottomNavLayout"
        app:layout_constraintEnd_toStartOf="@id/bottomNavLayout"
        android:layout_marginEnd="8dp"/>

    <ImageButton
        android:id="@+id/rightArrowButton"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/next_city"
        android:padding="5dp"
        android:scaleType="centerInside"
        android:src="@drawable/rightarrow"
        app:layout_constraintBottom_toBottomOf="@id/bottomNavLayout"
        app:layout_constraintTop_toTopOf="@id/bottomNavLayout"
        app:layout_constraintStart_toEndOf="@id/bottomNavLayout"
        android:layout_marginStart="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>